my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EIMPORT/EIMPORT.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\win64\bin\dml\1.2:0: error EIMPORT: cannot find file to import: C:\Users\nagen\simics-projects\my-intel-simics-project-1\win64\bin\dml\1.2: [Errno 13] Permission denied: 'C:\\Users\\nagen\\simics-projects\\my-intel-simics-project-1\\win64\\bin\\dml\\1.2'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EIMPORT.dml:10:1: error EIMPORT: cannot find file to import: nonexisting.dml
